# Agentic_Design_Patterns

./: justfile  pyproject.toml
notebooks/: Chapter 1_ Prompt Chaining (JSON example).ipynb  Chapter 3_ Parallelization (Google ADK Code Example).ipynb.ipynb  Chapter 3_ Parallelization (LangChain Code Example).ipynb  Chapter 4_ Reflection (Iterative Loop reflection).ipynb  Chapter 5_ Tool Use (Executing Code).ipynb.ipynb  Chapter 7_ Multi-Agent Collaboration - Code Example (CrewAI + Gemini).ipynb
notebooks/.ipynb_checkpoints/: Chapter 12_ Exception Handling and Recovery (Agent with Fallback)-checkpoint.ipynb  Chapter 13_ Human-in-the-Loop (Customer Support Agent with Personalization and Escalation)-checkpoint.ipynb  Chapter 1_ Prompt Chaining (Code Example)-checkpoint.ipynb  Chapter 2_ Routing (Google ADK Code Example)-checkpoint.ipynb  Chapter 2_ Routing (LangGraph Code Example)-checkpoint.ipynb  Chapter 4_ Reflection (ADK Code Example)-checkpoint.ipynb  Chapter 4_ Reflection (LangChain Code Example)-checkpoint.ipynb  Chapter 5_ Tool Use (CrewAI Function Calling Example)-checkpoint.ipynb  Chapter 5_ Tool Use (LangChain Code Example )-checkpoint.ipynb  Chapter 5_ Tool Use (Vertex AI Search).ipynb-checkpoint.ipynb  Chapter 5_ Tool Use (using Google Search).ipynb-checkpoint.ipynb  Chapter 6_ Planning - Code Example-checkpoint.ipynb  Chapter 6_ Planning - Deep Research API  Example-checkpoint.ipynb  Chapter 7_ Multi-Agent Collaboration - Code Example (ADK + Gemini AgentTooll).ipynb-checkpoint.ipynb  (+9 more)
